[gd_scene load_steps=5 format=3 uid="uid://de6v51e5rld6l"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_oumax"]
[ext_resource type="Script" uid="uid://cnntlpby5d8uq" path="res://src/windows/sfx_editor/sfx_selector_window.gd" id="2_vcynu"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="3_embwl"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="4_drd3d"]

[node name="SFXSelectorWindow" instance=ExtResource("1_oumax")]
offset_right = 1065.0
offset_bottom = 643.0
script = ExtResource("2_vcynu")
resizable = false
exclusive = true
show_maximize_button = false
show_close_button = false
show_focus_highlight = false
minimize_style = "fade_out"
panel_corner_radius = 0
panel_style_override = ExtResource("3_embwl")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
placeholder_text = "Search..."
clear_button_enabled = true

[node name="Tree" type="Tree" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Cancel"

[node name="SelectButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("4_drd3d")
text = "Select"

[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Tree" to="." method="_on_tree_item_activated"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
